// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SectionHeader renders correctly with defaults 1`] = `
<View
  color="#c3c3c3"
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#c3c3c3",
        "justifyContent": "center",
        "paddingBottom": 5,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 5,
        "width": "100%",
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#4c408f",
          "fontFamily": "Lobster-Regular",
          "fontSize": 24,
        },
      ]
    }
    textColor="#4c408f"
  >
    test 1
  </Text>
</View>
`;

exports[`SectionHeader renders with specified color and textColor props 1`] = `
<View
  color="blue"
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "blue",
        "justifyContent": "center",
        "paddingBottom": 5,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 5,
        "width": "100%",
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "yellow",
          "fontFamily": "Lobster-Regular",
          "fontSize": 24,
        },
      ]
    }
    textColor="yellow"
  >
    test 2
  </Text>
</View>
`;
